<resources>
    <string name="app_name">IOReno</string>


    <string name="project_type_promt">Choose a Project</string>
    <string-array name="type_arrays">
        <item>Bathroom</item>
        <item>Kitchen</item>
        <item>Tiling</item>
        <item>Wood Work</item>
        <item>Landscaping</item>
        <item>Plumbing</item>
        <item>Masonry</item>
        <item>Painting</item>
        <item>Drywalling</item>
        <item>Electrical Work</item>
        <item>Other</item>
    </string-array>

    <string-array name="time_arrays">
        <item>All-Time</item>
        <item>Last 7 Days</item>
    </string-array>

    <string name="nav_open">Nav Open</string>
    <string name="nav_close">Nav Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginTitle">\@</string>
    <string name="LoginPasswordTitle">***</string>
    <string name="btnCustomerSignUp">Sign up</string>
    <string name="CustomerSignupTitle">Have a Project?</string>
    <string name="ContnractorSignUpTitle">You are a Contractor?</string>
    <string name="signupname">Name:</string>
    <string name="signupemail">Email:</string>
    <string name="signuptitle">Email:</string>
    <string name="signupphone">Phone:</string>
    <string name="signuppassword1">Password:</string>
    <string name="signuppassword2">Confirm Password:</string>
    <string name="conconumber">CO Number:</string>
    <string name="conconame">CO Name</string>
    <string name="conphone">Phone:</string>
    <string name="conconame1">CO Name:</string>
    <string name="conemail">Email:</string>
    <string name="concontactname">Contact Name:</string>
    <string name="conpassword" />
    <string name="conpassword1">Password:</string>
    <string name="conpassword2">Confirm Password:</string>
    <string name="signinbutton">Sign in</string>
    <string name="btnConSignUp">Sign up</string>
    <string name="btnsignin">Sign in</string>
    <string name="New_Project">Create a new project</string>
    <string name="createNewProjectTitle">Project Title:</string>
    <string name="CreateNewProjectImage">Project Description:</string>
    <string name="CreateNewProjectType">Project Type: </string>
    <string name="CreateNewProjectAddress">Address:</string>
    <string name="CreateNewProjectCity">City:</string>
    <string name="CreateNewProjectBudget">Project Budget:</string>
    <string name="CreateNewProjectImg">Image:</string>
    <string name="CreateNewProjectBrowse">Browse…</string>
    <string name="CreateNewProjectGoBack">Go back</string>
    <string name="CreateNewProjectConfirm">Confirm</string>
    <string name="projectImageDescription">Project\'s Image</string>
    <string name="Edit">Edit</string>
    <string name="View">View</string>
    <string name="SeeEstimates">See Estimates</string>
    <string name="Delete">Delete</string>
    <string name="YourProject">Your Project</string>
    <string name="Budget">Budget: </string>
    <string name="ProjectListings">Project Listings</string>
    <string name="SeeYourEstimates">See your Estimates</string>
    <string name="FilterBy">Filter By:</string>
    <string name="Search">Search</string>
    <string name="ReadMore">Read More</string>
    <string name="ProjectDetails">Project Details</string>
    <string name="MakeEstimate">Make Estimate</string>
    <string name="DollarSign">$</string>
    <string name="Submit">Submit</string>
    <string name="Print">Print</string>
    <string name="Customer">Customer</string>
    <string name="Contractor">Contractor</string>
    <string name="SentEstimates">Sent Estimates</string>
    <string name="Select">Select</string>
    <string name="SeeReviews">See Reviews</string>
    <string name="YouHaveSelected">You have accepted this estimate for this project:</string>
    <string name="NoEstimateAvailable">You don\'t have any estimates for this project yet!</string>
    <string name="LeaveReview">Leave Review</string>
    <string name="LeaveAReview">Leave a Review</string>
    <string name="GetCustomerInformation">Get Customer Information</string>
    <string name="NoEstimateYet">You don\'t have any estimates yet!</string>
    <string name="CustomerInformationAndProject">Customer Information and Project</string>
    <string name="CustomerInformation">Customer Information</string>
    <string name="Name">Name:</string>
    <string name="PhoneNumber">Phone Number:</string>
    <string name="EmailAddress">Email Address:</string>
    <string name="SubmitReview">Submit Review</string>
    <string name="YouMustSelectARating">You must select a rating.</string>
    <string name="Review">Review</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Our_Mission">Our Mission</string>
    <string name="Our_Mission_Text">At IOReno, we work hard to provide solutions to your projects by connecting contractors to customers.</string>
    <string name="Abt">About</string>
    <string name="abttxt">At IOReno, we work hard to provide solutions to your projects by connecting contractors to customers.</string>
    <string name="abtitalioc">Because we believe a good idea is worth pursuing.</string>
    <string name="comingsoon">Coming soon...</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="contact_">Contact</string>
    <string name="cntc">Contact</string>
    <string name="contactname">Name:</string>
    <string name="contactemail">Email Address:</string>
    <string name="Subject">Subject:</string>
    <string name="Message">Messsage:</string>
    <string name="contactoffice">Our office</string>
    <string name="officeplace">735 Centre Bell, Suite 600 Montreal, QC J4L03D Phone: (123) 456-7890</string>
    <string name="contactAddress">735 Centre Bell, Suite 600</string>
    <string name="contactaddress2">Montreal, QC J4L03D</string>
    <string name="contactaddress3">Phone: (123) 456-7890</string>
    <string name="contactnameYve">Yves Brian</string>
    <string name="yveEmail">yves1939@yahoo.ca</string>
    <string name="SendMsg">Send Message</string>
    <string name="yvesmeail">yves1939@yahoo.ca</string>
    <string name="CONum">Contractor Number</string>
    <string name="Payments">Payments</string>
    <string name="DeniedPayments">Denied Payments</string>
    <string name="Totals">Totals</string>
    <string name="HomePageCustomerSignUp">Have a Project?\nSign Up</string>
    <string name="HomePageContractorSignUp">You are a Contractor?\nSign Up</string>
</resources>
