<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer_project_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageProjectPic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center|top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/projectImageDescription"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/txtProjectTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProjectPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/View"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnSeeEstimates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/DarkerBlue"
                android:text="@string/SeeEstimates"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Yellow"
                android:text="@string/Edit"
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Red"
            android:text="@string/Delete"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</LinearLayout>