<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerSeeEstimatesActivity">

    <TextView
        android:id="@+id/txtCustSeeEstimateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/SeeEstimates"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCustSeeEstimateNoEstimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:text="@string/NoEstimateAvailable"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/layoutAcceptedEstimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCustSeeEstimateYouHaveSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YouHaveSelected" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCustSeeEstimateSelectedEstimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/txtCustSeeEstimateSelectedCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <Button
                android:id="@+id/btnCustSeeEstimateLeaveReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/DarkerBlue"
                android:text="@string/LeaveReview"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewCustEstimates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/btnCustSeeEstimateGoBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="0"
        android:backgroundTint="@color/Red"
        android:text="@string/CreateNewProjectGoBack"
        android:textColor="@android:color/background_light"
        android:onClick="btnGoBack_onClick"/>
</LinearLayout>